2008-12-05  Sam Steingold  <sds@gnu.org>

	* zthread.d (MAKE-THREAD, CALL-WITH-TIMEOUT): simplify (GENSYM) funcall
	(THREAD-KILL): use L(thread_interrupt) instead of S() in funcall
	* spvw_circ.d (ht_add): use L(puthash) instead of S() in funcall
	* spvw.d (main_actions): simplify (GENSYM) funcall

2008-12-04  Vladimir Tzankov  <vtzankov@gmail.com>

	* zthread.d (remove_timeout_call): remove only the requested timeout
	call

2008-12-04  Vladimir Tzankov  <vtzankov@gmail.com>

	no PENDING_INTERRUPTS when MULTITHREAD (fixes also CALL-WITH-TIMEOUT)
	* lispbibl.d (PENDING_INTERRUPTS): do not define it when MULTITHREAD.
	it is not needed and also fixes problem with CALL-WITH-TIMEOUT when
	error is signalled (ualarm()/SIGALRM is called in error.d)
	(clisp_thread_t): remove _interrupt_pending
	* zthread.d (CALL-WITH-TIMEOUT): simplify code

2008-12-04  Vladimir Tzankov  <vtzankov@gmail.com>

	* stream.d (remove_from_open_streams): add function. removes stream
	from O(open_files). use open_files_lock when MULTITHREAD
	(close_buffered): use it
	(builtin_stream_close): use it

2008-12-03  Sam Steingold  <sds@gnu.org>

	* pathname.d (dirent_buf_size) [MULTITHREAD & HAVE_READDIR_R]:
	define only when needed
	(directory_search_scandir): use readdir_r only when present and
	necessary, i.e., when MULTITHREAD & HAVE_READDIR_R
	* configure.in: check for readdir_r

2008-12-04  Vladimir Tzankov  <vtzankov@gmail.com>

	threads fixes
	* error.d (end_error): abort on error signalled from region considered
	"safe for GC". these cases should be fixed - otherwise the thread
	will be treated as safe for GC while it is not
	* spvw.d (init_memory): O(all_mutexes) and O(all_exemptions) do not
	survive memory image loading - initialize them. TLO() objects also.
	* spvw_fault.d (handle_fault_range): guard with page spinlock all
	page accesses/modifications
	* lispbibl.d: warning for problems with threads & GENERATIONAL_GC
	builds
	(all_weakpointers_lock): O(all_weakpointers) lock. synchronize