@@ -1,5 +1,14 @@
 2008-12-05  Sam Steingold  <sds@gnu.org>
 
+	remove USER_HOMEDIR - assume that all supported platforms have it
+	* pathname.d (USER-HOMEDIR-PATHNAME): define unconditionally
+	* constobj.d (user_homedir): ditto
+	* constsym.d, subr.d (user_homedir_pathname): ditto
+	* lispbibl.d (USER_HOMEDIR): remove define
+	* spvw.d (main_actions): use L(user_homedir_pathname) in funcall
+
+2008-12-05  Sam Steingold  <sds@gnu.org>
+
 	* zthread.d (MAKE-THREAD, CALL-WITH-TIMEOUT): simplify (GENSYM) funcall
 	(THREAD-KILL): use L(thread_interrupt) instead of S() in funcall
 	* spvw_circ.d (ht_add): use L(puthash) instead of S() in funcall
